# GlobeWatch

./: .env.example  GlobeWatch-bugfixes.patch  README.md  debug_gdelt.py  fix-gdelt-provider.patch  main.py  requirements.txt  run.py
.claude/: settings.local.json
.github/workflows/: ci.yml
ai_task_planner/: .env.example  README.md  pyproject.toml
ai_task_planner/src/: app.py
ai_task_planner/src/core/: ai_parser.py  config.py  db.py  gcal.py  logging_conf.py  mapping.py  models.py  notify.py  scheduler.py  sync.py  validators.py
ai_task_planner/src/tests/: test_ai_parser.py  test_db.py  test_mapping.py  test_sync_dryrun.py
ai_task_planner/src/ui/: main_window.py  theme.py  widgets.py
app/: main.py
app/core/: __init__.py  config.py  logging.py  security.py
app/db/: __init__.py  session.py
app/repositories/: event_repository.py
app/schemas/: common.py  layers.py  region.py
app/services/: camera_service.py  event_ingestion_service.py  layer_cache.py  layer_data_service.py  marker_service.py  news_service.py  region_service.py
app/utils/: helpers.py
frontend/: .env.example  README.md  index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: main.tsx
globewatch/: .env.example  .gitignore  README.md
globewatch/app/: __init__.py  (+1 more)
modules/: face_matcher.py  face_selector.py  image_collector.py  name_search.py  osint_deep_scan.py  reverse_image_search.py
tests/: test_config_settings.py  test_globe_markers.py  test_health.py  test_ingestion_service.py  test_layers.py  test_security.py  test_settings.py
utils/: display.py
(+53 files in other folders)
